Fix modal resizer (left/right missing padding), Cleanup data-grid styles create mixin call

--- a/scss/components/_data-grid.scss
+++ b/scss/components/_data-grid.scss
@@ -13,12 +13,6 @@
 @use "../typography";
 @use "../utils";
 
-
-
-// TODO: This was based on site-details (uses data-grid), would be nice if this
-//       still has the details element styling but also provide selectors. Make 
-//       icon optional?
-
 /// Module Settings
 /// @type Map
 /// @prop {Number} columns [12] Default for grid mixin.
@@ -31,22 +25,20 @@
 /// @prop {String} position-class-row-first [position-row-first] See definition above
 /// @prop {String} position-class-row-last [position-row-last] See definition above
 
-
-
 $config: (
-  "columns":            12,
-  "attribute":          "data-grid",
-  "attribute-container" : "data-grid-container",
-  "gutter":             14px,
-  "breakpoint" :        false, // Fallback to default
-  "extra-breakpoints" : (
+  "columns":             12,
+  "attribute":           "data-grid",
+  "attribute-container": "data-grid-container",
+  "gutter":              14px,
+  "breakpoint":          false, // Fallback to default
+  "extra-breakpoints":   (
     "medium" : (
-      "breakpoint" : "medium",
-      "gutter" : 15px
+      "breakpoint": "medium",
+      "gutter":     15px
     ),
     "large" : (
-      "breakpoint" : "large",
-      "gutter" : 20px
+      "breakpoint": "large",
+      "gutter":     20px
     )
   ),
   "position-class-column-first": "position-column-first",
@@ -95,26 +87,21 @@ $config: (
   }
 }
 
-/// Prints component styles
+/// Prints default grid styles, if you want to customize further please use the create mixin
 /// @example scss
-///  @include ulu.component-example-styles();
+///  @include ulu.component-data-grid-styles();
 
-@mixin styles {
-  @include create(
-    $rule-color: color.get("rule-light"),
-    $extra-gutter-scales: (
-      "small" : 0.6
-    )
-  );
+@mixin styles() {
+  @include create();
 }
 
 /// Creates grid css (variation of original data-grid)
 /// @param {Number} $columns Columns in grid
 /// @param {Number} $breakpoint Breakpoint key for starting the grid
-/// @param {Map} $extra-breakpoints Map with other breakpoints to add (map of breakpoint and gutter see config.extra-breakpoints for an example (smalles to largest)
+/// @param {Map} $extra-breakpoints Map with other breakpoints to add (map of breakpoint and gutter see config.extra-breakpoints for an example (smallest to largest)
 /// @param {Number} $gutter Size in pixels for the gutters
 /// @param {Boolean} $include-rules Print styles for including rules
-/// @param {Number} $rule-size Size of the rule (border/seperator)
+/// @param {Number} $rule-size Size of the rule (border/separator)
 /// @param {Map} $extra-rule-styles Map of other rule styles to add (map of maps of size, and color), key is the styles name ("name": ("size" : 4px, "color" : "color name" || color))
 /// @param {String} $extra-gutter-scales A map of gutter scales used like `data-grid="gutter-scale: large`, configuration map property becomes scale name and value is the amount (multiplier) to apply to the grid's gutter ie `( "large" : 2.25 )`
 /// @param {Map} $attribute Attribute to use for selecting grid and children. Children attribute get's "-item" as a suffix ("ie. data-grid, data-grid-item")
@@ -126,7 +113,7 @@ $config: (
   $gutter: get("gutter"),
   $include-rules: false,
   $rule-size: 1px,
-  $rule-color: "rule",
+  $rule-color: "rule-light",
   $extra-rule-styles: (
     "light" : (
       "size" : 1px,
